--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - acs-zeep-test # Trigger on pushes to the main branch
+      - acs-zeep-sbx # Trigger on pushes to the main branch
   #pull_request:  # Trigger on pull requests
 
 jobs:
@@ -20,18 +20,18 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: infracdo # ${{ secrets.DOCKER_USERNAME }} # Add DOCKER_USERNAME secret in GitHub
-          password: dckr_pat__OLCfPrg82w1BYMpRc0aQbVzV1M # ${{ secrets.DOCKER_PASSWORD }} # Add DOCKER_PASSWORD secret in GitHub
+          username: ${{ secrets.DOCKER_USERNAME }} # Add DOCKER_USERNAME secret in GitHub
+          password: ${{ secrets.DOCKER_PASSWORD }} # Add DOCKER_PASSWORD secret in GitHub
 
       # Step 3: Build the Docker image
       - name: Build Docker Image
         run: 
           # docker build --target build -t my-image:build .
 
-          docker build -t acs-zeep-frontend:test .
+          docker build -t acs-zeep-frontend:sbx .
 
       # Step 4: Push the Docker image
       - name: Push Docker Image
         run: |
-          docker tag acs-zeep-frontend:test infracdo/acs-zeep-frontend:test
-          docker push infracdo/acs-zeep-frontend:test
+          docker tag acs-zeep-frontend:sbx infracdo/acs-zeep-frontend:sbx
+          docker push infracdo/acs-zeep-frontend:sbx
