--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - acs-zeep-sbx # Trigger on pushes to the main branch
+      - acs-zeep-sbx-rancher # Trigger on pushes to the main branch
   #pull_request:  # Trigger on pull requests
 
 jobs:
@@ -28,10 +28,10 @@ jobs:
         run: 
           # docker build --target build -t my-image:build .
 
-          docker build -t acs-zeep-frontend:sbx .
+          docker build -t acs-zeep-frontend:kubesbx.
 
       # Step 4: Push the Docker image
       - name: Push Docker Image
         run: |
-          docker tag acs-zeep-frontend:sbx infracdo/acs-zeep-frontend:sbx
-          docker push infracdo/acs-zeep-frontend:sbx
+          docker tag acs-zeep-frontend:kubesbx infracdo/acs-zeep-frontend:kubesbx
+          docker push infracdo/acs-zeep-frontend:kubesbx
