--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - acs-zeep-test # Trigger on pushes to the main branch
+      - acs-zeep-frontend # Trigger on pushes to the main branch
   #pull_request:  # Trigger on pull requests
 
 jobs:
@@ -28,10 +28,10 @@ jobs:
         run: 
           # docker build --target build -t my-image:build .
 
-          docker build -t acs-zeep-frontend:test .
+          docker build -t acs-zeep-mf:test .
 
       # Step 4: Push the Docker image
       - name: Push Docker Image
         run: |
-          docker tag acs-zeep-frontend:test infracdo/acs-zeep-frontend:test
-          docker push infracdo/acs-zeep-frontend:test
+          docker tag acs-zeep-mf:test infracdo/acs-zeep-mf:test
+          docker push infracdo/acs-zeep-mf:test
