--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 80",
+    "serve": "vue-cli-service serve --port 8080",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
@@ -29,13 +29,14 @@
     "fuse.js": "^3.6.1",
     "jsonlint": "^1.6.3",
     "jszip": "^3.5.0",
-    "keycloak-connect": "^11.0.3",
+    "keycloak-js": "^26.2.0",
     "material-design-icons-iconfont": "^6.1.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
+    "serve": "^14.2.4",
     "sortablejs": "^1.12.0",
     "tui-editor": "^1.4.10",
     "vue": "^2.6.12",
@@ -61,9 +62,9 @@
     "chai": "^4.2.0",
     "core-js": "^3.6.5",
     "css-loader": "^4.3.0",
-    "eslint": "^7.32.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.20.0",
-    "eslint-plugin-vuetify": "^1.0.0-beta.7",
+    "eslint-plugin-vuetify": "^1.1.0",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
     "sass": "^1.32.0",
