--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 VUE_APP_KEYCLOAK_REALM=workconnect-test
 VUE_APP_KEYCLOAK_URL=https://wcdssi.apolloglobal.net:8443/auth
 VUE_APP_KEYCLOAK_CLIENT_ID=acs-zeep-test
-VUE_APP_ZEEP_PROVISIONING_URL=https://acs-mb-test.apolloglobal.net
-VUE_APP_ZEEP_MONITORING_URL=http://localhost:7547
+VUE_APP_ZEEP_PROVISIONING_URL=https://zeep-be-test.apolloglobal.net
+VUE_APP_ZEEP_MONITORING_URL=https://zeep-be-test.apolloglobal.net
