--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - acs-zeep-test # Trigger on pushes to the main branch
-  #pull_request:  # Trigger on pull requests
+      - zeep-frontend-sbx-talos # Trigger on pushes to the main branch
 
 jobs:
   build-and-push:
@@ -28,10 +27,10 @@ jobs:
         run: 
           # docker build --target build -t my-image:build .
 
-          docker build -t acs-zeep-frontend:test .
+          docker build -t zeep-frontend:sbx .
 
       # Step 4: Push the Docker image
       - name: Push Docker Image
         run: |
-          docker tag acs-zeep-frontend:test infracdo/acs-zeep-frontend:test
-          docker push infracdo/acs-zeep-frontend:test
+          docker tag zeep-frontend:sbx infracdo/zeep-frontend:sbx
+          docker push infracdo/zeep-frontend:sbx
