--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env
 VUE_APP_KEYCLOAK_REALM=workconnect-test
-VUE_APP_KEYCLOAK_URL=https://wcdssi.apolloglobal.net:8443/auth
+VUE_APP_KEYCLOAK_URL=https://zeep-keycloak.am1-aks.apolloglobal.net/auth
 VUE_APP_KEYCLOAK_CLIENT_ID=acs-zeep-test
-VUE_APP_ZEEP_PROVISIONING_URL=https://zeep-be-sbx.am1-aks.apolloglobal.net
-VUE_APP_ZEEP_MONITORING_URL=https://zeep-be-sbx.am1-aks.apolloglobal.net/
+VUE_APP_ZEEP_PROVISIONING_URL=https://zeep-be-prod.am1-aks.apolloglobal.net
+VUE_APP_ZEEP_MONITORING_URL=https://zeep-be-prod.am1-aks.apolloglobal.net/
