--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - zeep-frontend-sbx-talos # Trigger on pushes to the main branch
+      - zeep-frontend-prod-talos # Trigger on pushes to the main branch
 
 jobs:
   build-and-push:
@@ -27,10 +27,10 @@ jobs:
         run: 
           # docker build --target build -t my-image:build .
 
-          docker build -t zeep-frontend:sbx .
+          docker build -t zeep-frontend:prod .
 
       # Step 4: Push the Docker image
       - name: Push Docker Image
         run: |
-          docker tag zeep-frontend:sbx infracdo/zeep-frontend:sbx
-          docker push infracdo/zeep-frontend:sbx
+          docker tag zeep-frontend:prod infracdo/zeep-frontend:prod
+          docker push infracdo/zeep-frontend:prod
